tests/src/frontend/typechecking/invalid/invalid_extension_subst_tparams_2.sk
trait Foo<T>

trait XIntable {
  fun xintable(): Int;
}

module M;
mutable base class .XSeq<+T>(value: T)
module end;
mutable class XCSeq<V> extends XSeq<V>

extension base class XSeq {
  type Tconst = T;
}

fun main(): void {
  print_string("Pass")
}
